...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Test Lab-->
        <scene sceneID="Tzt-tp-sfj">
            <objects>
                <tableViewController title="Test Lab" id="VWk-bv-ok3" customClass="ViewController" customModule="TestLab" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="jyq-vb-umM">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Cell" id="61j-sg-2Hh">
...
                        <connections>
                            <outlet property="dataSource" destination="VWk-bv-ok3" id="H76-ze-eUE"/>
                            <outlet property="delegate" destination="VWk-bv-ok3" id="vI7-Kk-HM1"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Test Lab" id="qpn-wy-TC4">
                        <barButtonItem key="backBarButtonItem" title="Back" id="emR-F6-Xd1"/>
                    </navigationItem>
                    <connections>
                        <segue destination="Ogb-0b-kUZ" kind="show" identifier="showtodolist" id="Frg-dg-x0N"/>
                        <segue destination="JxR-Ig-w0h" kind="show" identifier="showcameraandimages" id="TSc-RP-svw"/>
                        <segue destination="TvQ-UF-hDm" kind="show" identifier="showaudioandvideo" id="8cf-EN-qn5"/>
                        <segue destination="oUG-WG-U63" kind="show" identifier="showmapandlocation" id="TwC-Vk-JTp"/>
...
            </objects>
            <point key="canvasLocation" x="274" y="-550"/>
        </scene>
        <!--Todo List-->
        <scene sceneID="2Pu-vm-60I">
            <objects>
                <viewController title="Todo List" id="Ogb-0b-kUZ" customClass="TodoViewController" customModule="TestLab" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="feU-zE-t19">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WTO-fU-QJF">
                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
...
