//
//  TestLabUITests.swift
//  TestLabUITests
//
//  Created by Randolph on 4/14/18.
//  Copyright © 2018 Randolph. All rights reserved.
//

import XCTest

class TestLabUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
        // Use recording to get started writing UI tests.
        
        let app = XCUIApplication()
        app.navigationBars["Test Lab"].staticTexts["Test Lab"].tap()
        
        let tablesQuery = app.tables
        let todoListStaticText = tablesQuery/*@START_MENU_TOKEN@*/.staticTexts["Todo List"]/*[[".cells.staticTexts[\"Todo List\"]",".staticTexts[\"Todo List\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/
        todoListStaticText.tap()
        
        let textStaticText = tablesQuery.children(matching: .cell).element(boundBy: 0).staticTexts["text1"]
        textStaticText.tap()
        tablesQuery.children(matching: .cell).element(boundBy: 1).staticTexts["text"].tap()
        todoListStaticText.tap()
        todoListStaticText.tap()
        app.navigationBars["Todo List"].children(matching: .button).matching(identifier: "Back").element(boundBy: 0).tap()
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }
    
}
